--- a/learning_node/public/404.html
+++ b/learning_node/public/404.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Home</title>
+    <title>404</title>
 </head>
 <body>
-    <h1>Welcome to Home page</h1>
-    <a href="/about.html">About</a>
+    <h1>404 Page not found</h1>
     <footer>Built with Node.js</footer>
 </body>
 </html>
