--- a/learning_node/public/about.html
+++ b/learning_node/public/about.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>About</title>
 </head>
 <body>
-    <h1>Welcome to About</h1>
-    <a href="/">Home</a>
-    <a href="/api/users">Microservice of users</a>
+    <h1>Welcome to About page</h1>
+    <a href="/home.html">Home</a>
+    <footer>Built with Node.js</footer>
 </body>
 </html>
